--- a/src/components/grid-container/editor.scss
+++ b/src/components/grid-container/editor.scss
@@ -21,10 +21,6 @@
 			}
 		}
 	}
-
-	&.gt-none-column-gap {
-		--gt-column-gap: 1px;
-	}
 }
 
 @media only screen and (min-width: 480px) {
